fix(scss): fix header spacing and weight

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,3 +1,3 @@
 .router-outlet--wrapper {
-  margin: 2rem 3rem;
+  margin: 2rem;
 }
