--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -11,7 +11,7 @@ body, html {
 
 h2 {
     font-size: 1.5rem;
-    font-weight: 500;
+    font-weight: normal;
     margin: 0;
     padding: 0;
     color: #2a9d8f;
